--- a/fix-me/pom.xml
+++ b/fix-me/pom.xml
@@ -10,6 +10,14 @@
     <version>1.0-SNAPSHOT</version>
     <name>42 fix-me</name>
 
+    <developers>
+        <developer>
+            <name>adi-stef</name>
+            <email>adi-stef@student.42roma.it</email>
+            <url>https://whoami.aldisti.net</url>
+        </developer>
+    </developers>
+
     <modules>
         <module>common</module>
         <module>router</module>
@@ -21,6 +29,19 @@
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <pluginManagement>
