--- a/fix-me/common/pom.xml
+++ b/fix-me/common/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>net.aldisti</groupId>
 		<artifactId>fix-me</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>common</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>common</name>
 	<description>Common library of the 42 fix-me project</description>
 
@@ -17,4 +17,14 @@
 		<java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+	<dependencies>
+		<!-- Test -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.13.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
