--- a/fix-me/market/pom.xml
+++ b/fix-me/market/pom.xml
@@ -34,6 +34,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency> <!-- MONGODB Driver -->
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>5.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
