--- a/mongo/docker-compose.yml
+++ b/mongo/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: mongo
     restart: no
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${DB_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${DB_PASSWORD}
+      - MONGO_INITDB_ROOT_USERNAME=${DB_ADMIN}
+      - MONGO_INITDB_ROOT_PASSWORD=${DB_ADMIN_PASSWORD}
     ports:
       - 27017:27017 # default mongodb port
     volumes:
